Minor changes index.html file

--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-
+    <script src="https://cdn.scaledrone.com/scaledrone.min.js"></script>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Chat App created for final exam for Front-End Developer"
     />
     <title>Chat App SB</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="https://cdn.scaledrone.com/scaledrone.min.js"></script>
   </body>
 </html>
